# cm-python-client

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python.yml
cm_python_clients/: __init__.py  base_api_client.py  data_dump_client.py  load_data_client.py
cm_python_clients/utils/: __init__.py  csv_file_splitter.py
test/: test_data_dump.py  test_data_load.py
